<resources>
    <string name="app_name">Padmashali</string>
    <string name="welcome">Welcome</string>
    <string name="continu">Continue</string>
    <string name="year_info">Year: %d</string>

<!--    <string name="info_1804">In 1804, handlooms functioned through a manual mechanism comprising a wooden frame holding components like heddles, shafts, and warp beams. Heddles, attached to shafts, created sheds through which the weaver passed the weft thread using a shuttle. The beater or reed ensured the weft was evenly packed, while pedals or treadles controlled shaft movement for shed creation.</string>-->
<!--    <string name="info_1810">The back-strap loom is a simple loom with ancient roots, still used in many cultures around the world (such as Andean textiles). It consists of two sticks or bars between which the warps are stretched. One bar is attached to a fixed object and the other to the weaver, usually by means of a strap around the weaver&#39;s back. The weaver leans back and uses their body weight to tension the loom.</string>-->
<!--    <string name="info_1818">During 1818, the first cotton mill was established in India at Fort Gloster near Calcutta by a British merchant named Henry Gourger. About 700,000 lb of yarn was spun here annually. Bowreah Cotton Mills was India&#39;s first cotton cloth mill, established in 1818 by the British at Fort Gloster, located 15 miles south of Calcutta.</string>-->
<!--    <string name="info_1820">During 1820, most of the Indian weavers had been exported to England for the development of handloom in England. Indians mostly used to farm and the end result was transported to England, leading to advancements in tools and their development. This is the first power loom used in India, made of wood.</string>-->
<!--    <string name="info_1830">In 1830, using an 1822 patent, Richards Roberts manufactured the first loom with a cast-iron frame, the Roberts loom. The Roberts loom was a cast-iron power loom introduced by Richards Roberts in 1830. It was the first loom that was more viable than a hand loom and was easily adjustable and reliable, which led to its widespread use in the Lancashire cotton industry.</string>-->
<!--    <string name="info_1842">In 1842, James Bullough and William Kenworthy made the Lancashire Loom. It is a semiautomatic power loom. Although it is self-acting, it has to be stopped to recharge empty shuttles. It was the mainstay of the Lancashire cotton industry for a century, until the Northrop Loom, invented in 1894 with an automatic weft replenishment function, gained ascendancy.</string>-->
<!--    <string name="info_1844">Howe Sewing Machine by Elias Howe (1844) is the first sewing machine.</string>-->
<!--    <string name="info_1852">The Northrop Loom replaced the Lancashire Loom after its invention. James Henry Northrop (1894) invented a self-threading shuttle and shuttle spring jaws to hold a bobbin by means of rings on the butt. This paved the way to his automatic filling and changing battery of 1891, the basic feature of the Northrop Loom. The principal advantage of the Northrop Loom was that it was fully automatic; when a warp thread broke, the loom stopped until it was fixed. When the shuttle ran out of thread, Northrop&#39;s mechanism ejected the depleted pirn and loaded a new full one without stopping.</string>-->
<!--    <string name="info_1855">It is recorded that in 1855, a Frenchman adapted the Jacquard mechanism to a system by which it could be worked by electromagnets. There was significant interest, but trials were not successful, and the development was soon forgotten. Bonas Textile Machinery NV launched the first successful electronic Jacquard at ITMA Milan in 1983. Although the machines were initially small, modern technology has allowed Jacquard machine capacity to increase significantly, and single-end warp control can extend to more than 10,000 warp ends. The computer-controlled machines significantly reduce the downtime associated with changing punched paper designs, thus allowing smaller batch sizes.</string>-->
<!--    <string name="info_1857">The Northrop Loom was a fully automatic power loom marketed by George Draper and Sons in Hopedale, Massachusetts, starting in 1895. It was named after James Henry Northrop, who invented the shuttle-charging mechanism for the loom.</string>-->
<!--    <string name="info_1895">Northrop Loom:\n\nIn the 1890s, the Northrop Loom was introduced by James Henry Northrop. This automatic power loom featured continuous operation, with automatic shuttle changing, improving efficiency and productivity in textile weaving.\nThere are different models in the Northrop Loom, each model is used for making different types of clothes.\n\nModels and their usage:\nF Model: for weaving cotton sheeting, woollens, worsteds, blankets.\nD Model: for dress goods, dobby medium weight cloths, rain coatings.\nT Model: the standard loom for calico, twills, coloured shirtings, brocades.</string>-->
<!--    <string name="info_1900">Draper Loom:\n\nDuring the early 20th century, the Draper Loom, invented by George Draper, gained prominence for its speed and versatility. It contributed to the mechanisation of textile production, offering enhanced capabilities for weaving complex patterns.</string>-->
<!--    <string name="info_1952">Projectile loom:\n\nThe projectile weaving machine was introduced to the market in 1952 by Sulzer as the first successful shuttleless weaving machine. Unlike traditional looms that relied on shuttles, the projectile loom employs a unique mechanism to propel the weft yarn across the warp threads, resulting in faster and more efficient weaving.</string>-->
<!--    <string name="info_1953">Air jet loom:\n\nThe air-jet loom was invented by Vladimír Svatý. These looms used compressed air to propel the weft yarn through the shed, offering high-speed weaving and enabling the production of a wide range of fabrics.</string>-->
<!--    <string name="info_1955">Water jet looms:\n\nThese looms utilised a jet of water to propel the weft yarn through the shed, particularly suited for weaving synthetic and blended yarns. This is not preferred for all clothes. This is mostly used for silk, satin, linen, and wool. The first water-jet weaving machine was KOVO, which was developed by Vladimír Svatý.</string>-->
<!--    <string name="info_1958">Rapier looms:\n\nThis loom was invented in the early 1900s but fully commercialised in the 1960s. These looms used a rapier or flexible carrier to carry the weft yarn across the warp shed, providing versatility in weaving different yarns and fabrics.</string>-->
<!--    <string name="info_1960">In the 1960s, the Indian textile industry was undergoing significant changes, influenced by both domestic policies. During the 1960s, the hardware used in the Indian textile industry included spinning farms, looms, dyeing and finishing equipment, and knitting machines.</string>-->
<!--    <string name="info_1970">During the 1970s, the Indian textile industry primarily relied on a mix of traditional and modern hardware for various stages of textile manufacturing.</string>-->
<!--    <string name="info_1980">During the 1980s, the Indian textile industry saw significant advancement in technology and machinery, although it still retained some traditional methods of production. The hardware used during this time included computerised systems, and they also used textile testing equipment to check the quality and performance of the material.</string>-->
<!--    <string name="info_1990">During the 1990s, the Indian textile industry saw significant advancements in technology and machinery, leading to improved efficiency and productivity. Computer-aided design (CAD) and computer-aided manufacturing (CAM) systems were also introduced in the Indian textile industry during the 1990s. These systems facilitated the design, pattern-making, and production planning processes, reducing lead times and enhancing design capabilities.</string>-->
<!--    <string name="info_2000">During the 2000s, the Indian textile industry embraced energy-efficient machinery, curbing energy usage and environmental impact. Simultaneously, Enterprise Resource Planning (ERP) and Supply Chain Management (SCM) systems gained traction, enhancing operational efficiency and coordination across the supply chain.</string>-->
<!--    <string name="info_2010">During the 2010s, the Indian textile industry began integrating automation and robotics, employing robotic material handling systems, automated guided vehicles (AGVs), and robotic sewing machines. This adoption aimed to enhance efficiency and lower labour expenses, albeit at a relatively limited scale compared to other sectors.</string>-->
<!--    <string name="info_2020">In the 2020s, the Indian textile sector likely embraced IoT-enabled devices for real-time monitoring, wearable technology for health tracking, and digital printing equipment for customizable prints with reduced resource usage. Sustainable machinery investments aimed to enhance eco-friendliness, including energy-efficient looms and water recycling dyeing machines.</string>-->

    <string name="year_title">Year Title</string>
    <string name="title">Title</string>
    <string name="data">Data</string>
    <string name="year_data">Year Data</string>
    <string name="its_time_for_questions">Its Time For Questions</string>
    <string name="enter_your_roll_number">Enter Your Roll Number</string>
    <string name="question">Question</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="copy_flag">Copy Flag</string>
    <string name="retry">Retry</string>
</resources>