<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:id="@+id/main"
    android:background="@color/black">

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="16dp"/>

    <RadioGroup
        android:id="@+id/optionsRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/questionTextView"
        android:layout_marginTop="8dp">

        <RadioButton
            android:id="@+id/option1RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_1"
            android:textColor="@color/white"/>

        <RadioButton
            android:id="@+id/option2RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_2"
            android:textColor="@color/white"/>

        <RadioButton
            android:id="@+id/option3RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_3"
            android:textColor="@color/white"/>

        <RadioButton
            android:id="@+id/option4RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_4"
            android:textColor="@color/white"/>
    </RadioGroup>

    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continu"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="160dp"
        tools:ignore="NotSibling" />

</RelativeLayout>
